Split AdwSwipeTracker::begin-swipe into begin and prepare
See !53 (merged)
The flap change there works, but generally I'd like to still have a begin signal. Instead, we should introduce prepare
and use it where we currently use begin, and defer begin until actually starting the swipe, matching the swipe tracker code as well.
Edited by Alice Mikhaylenko